--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,7 @@
 {% if not new_user %}
 <div class="header clear-fix">
   <div class="centered-content">
-    <a class="logo" href="/">Emb-Snip</a>
+    <a class="logo" href="/">Emb-Snip (Weekly Snippets)</a>
     <div class="navigation">
       <a class="navigation-link" href="/settings?u={{username}}">user settings</a> |
       {% if is_admin %} <a class="navigation-link" href="/admin/settings">app settings/manage users (admin)</a> | {% endif %}
