--- a/templates/header.html
+++ b/templates/header.html
@@ -13,11 +13,11 @@
 {% if not new_user %}
 <div class="header clear-fix">
   <div class="centered-content">
-    <a class="logo" href="/">Emb-Snip (Weekly Snippets)</a>
+    <a class="logo" href="/">Weekly Snippets</a>
     <div class="navigation">
-      <a class="navigation-link" href="/settings?u={{username}}">user settings</a> |
-      {% if is_admin %} <a class="navigation-link" href="/admin/settings">app settings/manage users (admin)</a> | {% endif %}
-      <a class="navigation-link" href="{{logout_url}}">logout</a>
+      <a class="navigation-link" href="/settings?u={{username}}">Settings</a> |
+      {% if is_admin %} <a class="navigation-link" href="/admin/settings">Admin Settings</a> | {% endif %}
+      <a class="navigation-link" href="{{logout_url}}">Logout</a>
     </div>
   </div>
 </div>
