--- a/templates/settings.html
+++ b/templates/settings.html
@@ -27,6 +27,8 @@
   <input id="category" type="text" name="category" value="{{user.category}}">
 </div>
 
+<!-- We have no need for private setting or markdown setting -->
+<!--
 <fieldset class="user-settings-block">
   <legend class="user-settings-label">
     Interpret snippets as <a href="http://daringfireball.net/projects/markdown/syntax">markdown</a> by default?
@@ -48,6 +50,7 @@
          {% if not user.private_snippets %}checked{% endif %}>
          <label for="private-no">no</label>
 </fieldset>
+-->
 
 <fieldset class="user-settings-block">
   <legend class="user-settings-label">Receive reminder emails?:</legend>
