--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -41,22 +41,23 @@
     {% endif %}
 
     <!-- We have no need for private setting or markdown setting -->
-    <!--
-    <div class="snippet-setting">
-      <label>
-        <input type="checkbox" name="private" value="True"
-               {% if snippet.private %}checked{% endif %}>
-          Make snippet private (only viewable by people in the domain <i>{{domain}}</i>)
-      </label>
+
+    <div style="display: none">
+      <div class="snippet-setting">
+        <label>
+          <input type="checkbox" name="private" value="True"
+                {% if snippet.private %}checked{% endif %}>
+            Make snippet private (only viewable by people in the domain <i>{{domain}}</i>)
+        </label>
+      </div>
+      <div class="snippet-setting">
+        <label>
+          <input type="checkbox" name="is_markdown" value="True"
+                {% if snippet.is_markdown %}checked{% endif %}>
+            Snippet is written in <a href="http://daringfireball.net/projects/markdown/syntax">markdown syntax</a>
+        </label>
+      </div>
     </div>
-    <div class="snippet-setting">
-      <label>
-        <input type="checkbox" name="is_markdown" value="True"
-               {% if snippet.is_markdown %}checked{% endif %}>
-          Snippet is written in <a href="http://daringfireball.net/projects/markdown/syntax">markdown syntax</a>
-      </label>
-    </div>
-    -->
 
     <textarea class="snippet-textarea" name="snippet" rows="6" cols="80">{{snippet.text or ''}}</textarea>
     <div class="snippet-preview-container">
