--- a/templates/header.html
+++ b/templates/header.html
@@ -25,8 +25,8 @@
 <div class="sub-header">
   <div class="centered-content">
 
-    <a href="/">Personal</a>
-    <a href="/weekly">Team</a>
+    <a class="navigation-link" href="/">Personal</a> |
+    <a class="navigation-link" href="/weekly">Team</a>
 
     <!-- Hiding weird nav -->
     <div style="display: none">
