very light branding

--- a/static/snippets.css
+++ b/static/snippets.css
@@ -1,3 +1,12 @@
+/* CUSTOM */
+
+.eb_logo {
+    font-weight: bold;
+    color: #0588C8;
+}
+
+/* ORIGINAL */
+
 body {
     font-family: "Open Sans", sans-serif;
     font-size: 12px;
