--- a/templates/weekly_snippets.html
+++ b/templates/weekly_snippets.html
@@ -18,9 +18,15 @@
       <div class="snippet-section unique-snippet">
         <img class="snippet-avatar" src="http://www.gravatar.com/avatar/{{snippet.email_md5_hash}}?s=50&d=retro">
         {% if user.display_name %}
-          <h3><a href="/?u={{user.email}}">{{user.display_name}}</a> ({{user.email}}):</h3>
+          <h3 class="snippet-name">
+            <a href="/?u={{user.email}}">{{user.display_name}}</a>
+            <span class="tooltiptext">{{user.email}}</span>
+          </h3>
         {% elif snippet.display_name %}
-          <h3><a href="/?u={{user.email}}">{{snippet.display_name}}</a> ({{user.email}}):</h3>
+          <h3 class="snippet-name">
+            <a href="/?u={{user.email}}">{{snippet.display_name}}</a>
+            <span class="tooltiptext">{{user.email}}</span>
+          </h3>
         {% else %}
           <h3><a href="/?u={{user.email}}">{{user.email}}</a>:</h3>
         {% endif %}
