--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -3,7 +3,19 @@
 
 <h1>Snippets for {{username}}</h1>
 
-<button class="foo-button mdc-button">Button</button>
+
+<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon">
+  <i class="material-icons mdc-text-field__icon">visibility</i>
+  <input class="mdc-text-field__input" id="text-field-hero-input">
+  <div class="mdc-notched-outline">
+    <div class="mdc-notched-outline__leading"></div>
+    <div class="mdc-notched-outline__notch">
+      <label for="text-field-hero-input" class="mdc-floating-label">Week Starting Oct 7, 2019</label>
+    </div>
+    <div class="mdc-notched-outline__trailing"></div>
+  </div>
+</div>
+
 
 {% for snippet in snippets %}
   <div class="snippet unique-snippet">
@@ -102,7 +114,7 @@
          v.innerHTML = window.marked(v.innerHTML);
       });
 
-      mdc.ripple.MDCRipple.attachTo(document.querySelector('.foo-button'));
+      const textField = new MDCTextField(document.querySelector('.mdc-text-field'));
 </script>
 
 
