--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -114,6 +114,7 @@
          v.innerHTML = window.marked(v.innerHTML);
       });
 
+      import {MDCTextField} from '@material/textfield';
       const textField = new MDCTextField(document.querySelector('.mdc-text-field'));
 </script>
 
