--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -56,11 +56,11 @@
         <textarea class="snippet-textarea" name="snippet" rows="6" cols="80">{{snippet.text or ''}}</textarea>
         <div class=" clear-fix">
           <div class="snippet-actions">
-            <input type="submit" value="Save" class="button save-button" disabled>
             <button class="button undo-button" disabled>
               <span class="mobile-visible" aria-label="Clear Changes">&times;</span>
-              <span class="mobile-hidden">Clear Changes</span>
+              <span class="mobile-hidden">Cancel</span>
             </button>
+            <input type="submit" value="Save" class="button save-button" disabled>
           </div>
         </div>
       </div>
