removing button disabling

--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -59,11 +59,11 @@
         <textarea class="snippet-textarea" name="snippet" rows="6" cols="80">{{snippet.text or ''}}</textarea>
         <div class=" clear-fix">
           <div class="snippet-actions">
-            <button class="button undo-button" disabled>
+            <button class="button undo-button">
               <span class="mobile-visible" aria-label="Clear Changes">&times;</span>
               <span class="mobile-hidden">Cancel</span>
             </button>
-            <input type="submit" value="Save" class="button save-button" disabled>
+            <input type="submit" value="Save" class="button save-button">
           </div>
         </div>
       </div>
