--- a/static/snippets.css
+++ b/static/snippets.css
@@ -193,6 +193,7 @@ h1 {
     overflow-x: auto;
     padding-bottom: 10px;
     padding-top: 10px;
+    background: #fafafa;
 }
 
 /* Snippets */
@@ -206,9 +207,12 @@ h1 {
 }
 
 .snippet {
-    border-top: 1px solid #ccc;
     margin-bottom: 10px;
-    padding: 10px 0;
+    padding: 16px;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0,0,0,.12);
+    padding: 16px;
+    border-radius: 4px;
+    background: white;
 }
 .snippet-header {
     margin-bottom: 10px;
