--- a/static/snippets.css
+++ b/static/snippets.css
@@ -270,6 +270,11 @@ h1 {
     margin-top: 10px;
     padding: 10px 10px;
     width: 100%;
+    border-radius: 4px;
+    caret-color: rgba(98,0,238);
+}
+.snippet-textarea:focus {
+    border: 2px solid rgba(98,0,238);
 }
 .snippet-text,
 .snippet-text-markdown {
