--- a/static/snippets.css
+++ b/static/snippets.css
@@ -275,6 +275,7 @@ h1 {
 }
 .snippet-textarea:focus {
     border: 2px solid rgba(98,0,238);
+    outline: none;
 }
 .snippet-text,
 .snippet-text-markdown {
