--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -10,7 +10,7 @@
 
       <div class="snippet-header clear-fix">
         <h2>
-          <span class="snippets-title">Snippets for the week starting</span>
+          <span class="snippets-title">Week of</span>
           {{snippet.week|readable_date}}
           {% if not snippet.text and snippet.week == one_week_ago %}
           <span class="snippet-alert">Due today!</span>
