--- a/static/snippets.css
+++ b/static/snippets.css
@@ -104,13 +104,13 @@ body:not(:-moz-handler-blocked) fieldset {
 .snippet-alert {
     /* Red background */
     background: #d24a45;
-    border-radius: 4px;
+    border-radius: 16px;
     color: #fff;
     display: inline-block;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
     margin-left: 3px;
-    padding: 2px 8px;
+    padding: 2px 10px;
     vertical-align: text-bottom;
 }
 .snippet-warning {
@@ -168,16 +168,20 @@ h1 {
 }
 /* Buttons */
 .button {
-    background: #fff;
-    border: 1px solid #bbb;
+    background: white;
     border-radius: 4px;
-    color: #222;
-    padding: 5px 10px;
+    color: #1976d2;
+    padding: 6px 14px;
+    border: none;
+    font-weight: 500;
+    letter-spacing: 0.02857em;
+    text-transform: uppercase;
+    font-size: 0.875rem;
+    line-height: 1.75;
 }
 .button:hover,
 .button:focus {
-    background: #eee;
-    border-color: #aaa;
+    background: rgba(25, 118, 210, 0.08);
     cursor: pointer;
 }
 .button[disabled] {
@@ -219,18 +223,17 @@ h1 {
     margin: 0;
 }
 .snippet-actions {
+    padding-top: 8px;
     float: right;
 }
 .save-button:not(:disabled) {
     /* Green button background */
-    background-color: #639b24;
-    border-color: #639b24;
+    background-color: #1976d2;
     color: #fff;
 }
 .save-button:not(:disabled):hover {
     /* Darker green button background on hover */
-    background-color: #568522;
-    border-color: #568522;
+    background: rgb(17, 82, 147);
 }
 .hide-button:not(:disabled) {
     /* Yellow button background */
@@ -265,7 +268,7 @@ h1 {
     box-sizing: border-box;
     font-size: inherit;
     margin-top: 10px;
-    padding: 10px 10px;
+    padding: 16px;
     width: 100%;
     border-radius: 4px;
     caret-color: rgba(98,0,238);
