--- a/static/snippets.css
+++ b/static/snippets.css
@@ -107,8 +107,8 @@ body:not(:-moz-handler-blocked) fieldset {
     border-radius: 16px;
     color: #fff;
     display: inline-block;
-    font-size: 12px;
-    font-weight: 400;
+    font-size: 11px;
+    font-weight: 500;
     margin-left: 3px;
     padding: 2px 10px;
     vertical-align: text-bottom;
@@ -176,8 +176,8 @@ h1 {
     font-weight: 500;
     letter-spacing: 0.02857em;
     text-transform: uppercase;
-    font-size: 0.875rem;
     line-height: 1.75;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 .button:hover,
 .button:focus {
@@ -266,12 +266,12 @@ h1 {
 }
 .snippet-textarea {
     box-sizing: border-box;
-    font-size: inherit;
+    font-size: 14px;
+    font-family: "Open Sans", sans-serif;
     margin-top: 10px;
     padding: 16px;
     width: 100%;
     border-radius: 4px;
-    caret-color: rgba(98,0,238);
 }
 .snippet-text,
 .snippet-text-markdown {
@@ -505,14 +505,6 @@ table td {
     .sub-header {
         font-size: 10px;
     }
-    .snippet-alert {
-        font-size: 9px;
-        margin-left: 0;
-        margin-top: 3px;
-        padding: 1px 4px;
-        vertical-align: text-top;
-    }
-
     .weekly-snippet-heading h1 {
         /* Keep about the same width so the arrows stay in the same place */
         min-width: 200px;
