--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,10 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="/static/snippets.css?v2">
+
+  <!-- Emoji Picker -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="lib/css/emoji.css" rel="stylesheet">
 </head>
 
 <body>
