correcting css link

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
 
   <!-- Emoji Picker -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href="lib/css/emoji.css" rel="stylesheet">
+  <link href="/static/emoji/css/emoji.css" rel="stylesheet">
 </head>
 
 <body>
