--- a/static/snippets.css
+++ b/static/snippets.css
@@ -274,6 +274,7 @@ h1 {
     margin-top: 10px;
     padding: 16px;
     width: 100%;
+    min-height: 160px;
     border-radius: 4px;
     outline: none;
 }
