--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -62,7 +62,8 @@
           rows="6" cols="80"
           placeholder="Last Week / This Week / Shoutouts...">{{snippet.text or ''}}</textarea>
         <div class="clear-fix">
-          <div class="how-to">Format with <a href="https://www.markdownguide.org/" target="_blank">Markdown</a></div>
+          <div class="how-to mobile-hidden">Format with <a href="https://www.markdownguide.org/" target="_blank">Markdown</a>,
+          bulleted list with '* '</div>
           <div class="snippet-actions">
             <button class="button undo-button">Cancel</button>
             <input type="submit" value="Save" class="button save-button">
