--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -63,7 +63,7 @@
           placeholder="Last Week / This Week / Shoutouts...">{{snippet.text or ''}}</textarea>
         <div class="clear-fix">
           <div class="how-to mobile-hidden">Format with <a href="https://www.markdownguide.org/" target="_blank">Markdown</a>,
-          bulleted list with '* '</div>
+            to create an unordered list, add dashes (-) or asterisks (*) in front of line items</div>
           <div class="snippet-actions">
             <button class="button undo-button">Cancel</button>
             <input type="submit" value="Save" class="button save-button">
