--- a/templates/header.html
+++ b/templates/header.html
@@ -24,7 +24,7 @@
 <div class="sub-header">
   <div class="centered-content">
 
-    <a class="navigation-link" href="/">Personal</a> |
+    <a class="navigation-link" href="/">My Snippets</a> |
     <a class="navigation-link" href="/weekly">Team</a>
 
     <!-- Hiding weird nav -->
