--- a/static/snippets.css
+++ b/static/snippets.css
@@ -12,6 +12,7 @@ body {
     font-size: 12px;
     padding: 0;
     margin: 0;
+    background-color: #fafafa;
 }
 
 /* Reset styles */
@@ -197,7 +198,6 @@ h1 {
     overflow-x: auto;
     padding-bottom: 10px;
     padding-top: 10px;
-    background: #fafafa;
 }
 
 /* Snippets */
