Early snippets warning

--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -32,6 +32,12 @@
           >Set your snippet category!</a>
       </div>
       {% endif %}
+      <div class="snippet-warning" style="display: none!">
+        <span>
+          Woah nelly you *can* fill this out now if want to get a head start, but there are still
+          4 days left in the week!
+        </span>
+      </div>
 
       <!-- We have no need for private setting or markdown setting -->
 
