--- a/static/snippets.css
+++ b/static/snippets.css
@@ -114,7 +114,7 @@ body:not(:-moz-handler-blocked) fieldset {
     padding: 2px 10px;
     vertical-align: text-bottom;
 }
-.snippet-warning {
+.early-warning {
     /* Red background and darker red border/text */
     background: #fbe2e0;
     border: 1px solid #c52717;
