--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -23,16 +23,7 @@
 
       <input type="hidden" name="week" value="{{snippet.week|iso_date}}">
       <input type="hidden" name="u" value="{{username}}">
-      {% if user.category == null_category %}
-      <div class="snippet-warning">
-        <span>
-          <strong>WARNING:</strong> Snippet will go in the "{{null_category}}" category.
-        </span>
-        <a href="/settings?msg=Set+'Category'+below,+then+click+'Save.'&redirect_to=snippet_entry"
-          >Set your snippet category!</a>
-      </div>
-      {% endif %}
-      <div class="snippet-warning" style="display: none!">
+      <div class="early-warning" style="display: none;">
         <span>
           Woah nelly you *can* fill this out now if want to get a head start, but there are still
           4 days left in the week!
