--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -29,6 +29,7 @@
           4 days left in the week!
         </span>
       </div>
+      {{day_of_week}}
 
       <!-- We have no need for private setting or markdown setting -->
 
