--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -24,10 +24,11 @@
       <input type="hidden" name="week" value="{{snippet.week|iso_date}}">
       <input type="hidden" name="u" value="{{username}}">
       {% if snippet.week < one_week_ago and day_of_week < 4 %}
-      <div class="early-warning" style="display: none;">
+      <div class="early-warning">
         <span>
-          You can fill this out now if want to get a head start, but there are still
-          {{7 - day_of_week}} days left in the week!
+          You can fill your snippets out now if want to get a head start, but there are still
+          {{7 - day_of_week}} days left in the week! This week's snippets are due on Monday,
+          {{7 - day_of_week}} days from now.
         </span>
       </div>
       {% endif %}
