--- a/templates/header.html
+++ b/templates/header.html
@@ -25,7 +25,7 @@
   <div class="centered-content">
 
     <a class="navigation-link" href="/">My Snippets</a> |
-    <a class="navigation-link" href="/weekly">Team</a>
+    <a class="navigation-link" href="/weekly">Team Snippets</a>
 
     <!-- Hiding weird nav -->
     <div style="display: none">
