--- a/templates/user_snippets.html
+++ b/templates/user_snippets.html
@@ -26,7 +26,7 @@
       {% if not snippet.text and snippet.week > one_week_ago and day_of_week < 4 %}
       <div class="early-warning">
         <span>
-          You can fill out these snippets now if want to get a head start, but there are still
+          You can fill out these snippets now if you want to get a head start, but there are still
           a few days left in the week! This week's snippets aren't due until next Monday,
           {{7 - day_of_week}} days from now.
         </span>
